// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Readmes should get merged readme for members: (Output File Strategy "members") (Option Group "1") 1`] = `
"**typedoc-stubs** • API

***

# MY README

> Some block quote

Some text.

## Readme heading

Some text.

## typedoc-stubs

Module commments

### Functions

- [someFunction](functions/someFunction.md)
"
`;

exports[`Readmes should get merged readme for modules: (Output File Strategy "modules") (Option Group "1") 1`] = `
"**typedoc-stubs** • API

***

# MY README

> Some block quote

Some text.

## Readme heading

Some text.

## typedoc-stubs

Module commments

### Contents

- [Functions](index.md#functions)
    - [someFunction](index.md#somefunction)

### Functions

#### someFunction()

> **someFunction**(): \`void\`

##### Returns

\`void\`
"
`;
